# stafford-gpt-service

./: .gitignore  Dockerfile  app.py  constants.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
db/init/: 01-vector.sql
scripts/: build-app.sh  rebuild-app.sh  start-all.sh  start-app.sh  start-db.sh  stop-all.sh
src/stafford_gpt/api/: ingestion.py  query.py
src/stafford_gpt/config/: program_mappings.py  settings.py
src/stafford_gpt/core/: utils.py
src/stafford_gpt/database/: connection.py
src/stafford_gpt/models/: requests.py
src/stafford_gpt/services/: data_access.py  orchestrator.py  program_extractor.py  query_processing.py  simple_query_processor.py
